[tool.poetry]
name = "quiet-star"
version = "0.1.0"
description = "Implementation of Quiet-STAR language modeling technique"
authors = ["Jonathan Skowera <jskowera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
transformers = "^4.39.2"
datasets = "^2.18.0"
triton = [
    { platform = "linux", version = "^2.2.0" },
]
mlx = [
    { platform = "darwin", version = "^0.9.1" },
]
lightning = "^2.2.1"
ipykernel = "^6.29.4"
rich = "^13.7.1"
ipywidgets = "^8.1.2"
pip = "^24.0"
mypy = "^1.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"
mypy = "^1.9.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
disable_error_code = ["import-untyped"]
follow_imports = "skip"
exclude = [".venv"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
