[tool.poetry]
name = "quiet-star"
version = "0.8.0"
description = "Implementation of Quiet-STAR language modeling technique"
authors = ["Jonathan Skowera <jskowera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.18.0"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
lightning = "^2.2.1"
mlx = [
    { platform = "darwin", version = "^0.9.1" },
]
mypy = "^1.9.0"
pip = "^24.0"
rich = "^13.7.1"
simple-parsing = "^0.1.5"
torch = "^2.3.0"
transformers = "^4.39.2"
triton = "^2.3.0"
# triton-nightly = [
#     { source = "triton", version = "^3.0.0.post20240524232251" },
# ]
# nvidia-cublas-cu12 = "12.1.3.1"
# nvidia-cuda-cupti-cu12 = "12.1.105"
# nvidia-cuda-nvrtc-cu12 = "12.1.105"
# nvidia-cuda-runtime-cu12 = "12.1.105"
# nvidia-cudnn-cu12 = "8.9.2.26"
# nvidia-cufft-cu12 = "11.0.2.54"
# nvidia-curand-cu12 = "10.3.2.106"
# nvidia-cusolver-cu12 = "11.4.5.107"
# nvidia-cusparse-cu12 = "12.1.0.106"
# nvidia-nccl-cu12 = "2.20.5"
# nvidia-nvjitlink-cu12 = "12.4.127"
# nvidia-nvtx-cu12 = "12.1.105"
lm-eval = "^0.4.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"
mypy = "^1.9.0"
pre-commit = "^3.7.0"


[[tool.poetry.source]]
name = "triton"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/Triton-Nightly/pypi/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
disable_error_code = ["import-untyped"]
files = ["tests/torch/*.py", "quiet_star/*.py", "quiet_star/torch/*.py"]
follow_imports = "skip"
exclude = [".venv"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
